--- a/CSS/estilosRegistro.css
+++ b/CSS/estilosRegistro.css
@@ -15,6 +15,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 .form::before{
     content: "";
@@ -117,4 +118,14 @@ abbr{
 }
 .botones input[type="reset"]:hover{
     background-color: #757575;
+}
+
+/*Diseño "Responsive"*/
+@media screen and (max-width: 768px){
+    .form{
+        padding: 40px 20px;
+    }
+    .botones input{
+        width: 80%;
+    }
 }
