--- a/CSS/estilosAdmin.css
+++ b/CSS/estilosAdmin.css
@@ -1,7 +1,7 @@
-.usuarios a{
+.opciones a{
     text-decoration: none;
 }
-.usuarios{
+.opciones{
     width: 35vw;
     background-color: #ffff00;
     border-radius: 20px;
