--- a/CSS/estilosIndex.css
+++ b/CSS/estilosIndex.css
@@ -11,8 +11,8 @@ body{
     font-family: "Garamond";
 }
 .contenedor{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
