--- a/CSS/estilosRegistro.css
+++ b/CSS/estilosRegistro.css
@@ -11,11 +11,11 @@ body{
     font-family: "Garamond";
 }
 .contenedor{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    min-height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 .form::before{
@@ -94,13 +94,13 @@ abbr{
     text-decoration: none;
 }
 .fecha-nacimiento p{
-    padding: 5px;
+    padding: 10px;
     width: 50%;
     background-color: #212121;
 }
 .fecha-nacimiento input{
     width: 50%;   
-    padding: 14px;
+    padding: 8px;
 }
 .botones{
     display: flex;
