--- a/CSS/estilosAdmin.css
+++ b/CSS/estilosAdmin.css
@@ -14,7 +14,7 @@
     text-decoration: none;
 }
 .opciones{
-    width: 35vw;
+    width: 40%;
     background-color: #ffff00;
     border-radius: 20px;
 }
@@ -44,4 +44,36 @@
 .footer-boton i{
     font-size: x-large;
     margin-right: 20px;
+}
+
+@media screen and (max-width: 1200px){
+    .icono h2{
+        font-size: x-large;
+    }
+    .icono i{
+        margin: 20px 30px 10px 20px;
+        font-size: 15vw;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .icono h2{
+        font-size: large;
+    }
+    .icono i{
+        margin: 20px 30px 10px 20px;
+        font-size: 15vw;
+    }
+}
+
+@media screen and (max-width: 580px){
+    .icono h2{
+        display: none;
+    }
+    .icono{
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        font-size: 10vw;
+    }
 }
