--- a/CSS/estilosIndex.css
+++ b/CSS/estilosIndex.css
@@ -139,6 +139,12 @@ select{
 }
 
 /* Diseño "Responsive" */
+@media screen and (max-width: 995px){
+    select{
+        padding: 14px 0 14px 0;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .form {
       width: 80%;
@@ -152,6 +158,9 @@ select{
     }
     .campos select {
       font-size: medium;
+    }
+    select{
+        padding: 8px;
     }
     .botones input {
       font-size: medium;
