--- a/CSS/estilosPrincipal.css
+++ b/CSS/estilosPrincipal.css
@@ -1,3 +1,4 @@
+/*Estilos de las plantillas (header/footer)*/
 body{
     background-image: url("./Imgs/Fondo_14.jpg");
     background-position: center top; 
