--- a/CSS/estilosCliente.css
+++ b/CSS/estilosCliente.css
@@ -18,18 +18,25 @@
     border-radius: 20px;
     width: 100%;
 }
+.contenedor-vehiculos .botones .principales{
+    margin-left: 10px;
+}
 .contenedor-vehiculos .botones i{
     color: #0d6efd;
     font-size: xx-large;
 }
-.contenedor-vehiculos .botones{
-    margin-bottom: 20px;
-}
 .contenedor-vehiculos .vehiculos{
     display: flex;
+    flex-direction: column;
     width: 100%;
     justify-content: center;
     color: white;
+}
+.contenedor-vehiculos .vehiculos .titulo{
+    display: flex;
+    justify-content: center;
+    margin: 20px 0 5px 0;
+    width: 100%;
 }
 .contenedor-vehiculos .vehiculos table{
     width: 100%;
@@ -42,9 +49,38 @@
 }
 .contenedor-vehiculos .vehiculos .modal-vehiculo{
     width: 100%;
-    height: 30vh;
-    border-radius: 20px;
+    height: 30%;
 }
-.contenedor-vehiculos .vehiculos .modal-vehiculo input{
-    border-radius: 20px;;
+.contenedor-vehiculos .vehiculos .modal-vehiculo button{
+    background: none;
+    border: none;
+}
+.contenedor-vehiculos .vehiculos .modal-vehiculo .encabezado,
+.contenedor-vehiculos .vehiculos .modal-vehiculo .final{
+    display: flex;
+    border-radius: 20px 20px 0 0;
+    width: 100%;
+    background-color: black;
+}
+.contenedor-vehiculos .vehiculos .modal-vehiculo .encabezado p{
+    margin: 10px 0 10px 10px;
+    width: 80%;
+}
+.contenedor-vehiculos .vehiculos .modal-vehiculo .encabezado button{
+    width: 20%;
+}
+.contenedor-vehiculos .vehiculos .modal-vehiculo .encabezado i{
+    color: #ffc107;
+    font-size: large;
+}
+.contenedor-vehiculos .vehiculos .modal-vehiculo .img{
+    display: flex;
+    width: 100%;
+    height: 100%
+}
+.contenedor-vehiculos .vehiculos .modal-vehiculo .final p{
+    margin: 10px 0 10px 10px;
+}
+.contenedor-vehiculos .vehiculos .modal-vehiculo .final{
+    border-radius: 0 0 20px 20px;
 }
