--- a/CSS/estilosCliente.css
+++ b/CSS/estilosCliente.css
@@ -26,12 +26,15 @@
     font-size: xx-large;
 }
 .contenedor-vehiculos .vehiculos{
-    display: flex;
     flex-direction: column;
     width: 100%;
+    max-height: 60vh;
     justify-content: center;
     color: white;
+    overflow-y: scroll;
 }
+
+/*Estilos de la Tabla de Vehículos*/
 .contenedor-vehiculos .vehiculos .titulo{
     display: flex;
     justify-content: center;
@@ -85,27 +88,30 @@
     border-radius: 0 0 20px 20px;
 }
 
-/*Estilo Modal (Pop up)*/
-.pop-up-compra{
-    background-color: rgba(0, 0, 0, .6);
-    position: fixed;
-    left: 50%;
-    transform: translateX(-50%);
-    visibility: hidden;
-    padding: 20px;
-    border-radius: 10px;
-    width: 40%;
-    color: white;
+/*Estilos del Modal*/
+.modal-content{
+    display: flex;
+    align-items: center;
 }
-
-.pop-up-detalles{
-    background-color: rgba(0, 0, 0, .6);
-    position: fixed;
-    left: 50%;
-    transform: translateX(-50%);
-    visibility: hidden;
-    padding: 20px;
-    border-radius: 10px;
-    width: 40%;
-    color: white;
+.modal-header,
+.modal-footer{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    background-color: #ffc107;
+}
+.modal-body{
+    width: 90%;
+} 
+.modal-body .nombre,
+.modal-body .descripcion,
+.modal-body .valor{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 25px;
+}
+fieldset{
+    width: 100%;
+    border: 1px solid black;
 }
