--- a/CSS/estilosOpcionesAdmin.css
+++ b/CSS/estilosOpcionesAdmin.css
@@ -99,7 +99,7 @@
     background-color: #757575;
 }
 .tabla .btnEditar,
-.tabla .btnEliminar{
+.tabla .btnInactivar{
     font-style: none;
     background: none;
     border: none;
@@ -108,7 +108,37 @@
     color: #0d6efd;
     font-size: x-large;
 }
-.tabla .btnEliminar i{
+.tabla .btnInactivar i{
     color: red;
     font-size: x-large;
+}
+
+/*Estilos Modales*/
+.modal-body .campos{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
+}
+.modal-body .campos input{
+    padding: 4px;
+    border: 1px solid black;
+    width: 100%;
+}
+.modal-body i{
+    padding: 10px;
+    color: white;
+    background-color: black;
+}
+.modal-body .select{
+    background-color: #198754;
+    width: 100%;
+}
+.modal-body .select i{
+    width: 50%;
+    font-style: normal;
+}
+.modal-body .select select{
+    padding: 11px;
+    width: 50%;
 }
