--- a/CSS/estilosOpcionesAdmin.css
+++ b/CSS/estilosOpcionesAdmin.css
@@ -99,16 +99,23 @@
     background-color: #757575;
 }
 .tabla .btnEditar,
-.tabla .btnInactivar{
+.tabla .btnInactivar,
+.tabla .btnActivar,
+.tabla .btnEliminar{
     font-style: none;
     background: none;
     border: none;
 }
-.tabla .btnEditar i{
+.tabla .btnEditar i,
+.tabla .btnActivar i{
     color: #0d6efd;
     font-size: x-large;
 }
 .tabla .btnInactivar i{
+    color: #ffc107;
+    font-size: x-large;
+}
+.tabla .btnEliminar i{
     color: red;
     font-size: x-large;
 }
