--- a/CSS/estilosCliente.css
+++ b/CSS/estilosCliente.css
@@ -1,4 +1,4 @@
-/*Estilos del Cliente en su página principañ*/
+/*Estilos del Cliente en su página principal*/
 
 .contenedor-vehiculos::before{
     content: "";
