--- a/CSS/estilosIndex.css
+++ b/CSS/estilosIndex.css
@@ -81,7 +81,7 @@ body{
     width: 100%;
 }
 .listaVehiculos .img{
-    display: flex;
+    padding: 5%;
     width: 100%;
     height: 75vh;
 }
@@ -89,6 +89,9 @@ body{
     display: none;
 }
 img.aparecerSlide{
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 15px 20px 15px black;
     display: block;
     animation-name: fade;
     animation-duration: 1.5s;
@@ -108,16 +111,22 @@ img.aparecerSlide{
 }
 .listaVehiculos .btnIzq{
     padding-left: 15px;
-    left: 0;
+    left: 5%;
 }
 .listaVehiculos .btnDer{
     padding-right: 15px;
-    right: 0;
+    right: 5%;
+}
+.listaVehiculos i{
+    background-color: rgba(0, 0, 0, .3);
+    border-radius: 50%;
+    padding: 5px 8px 5px 8px;
 }
 .detalles{
     position: absolute;
     bottom: 0;
     display: flex;
+    justify-content: center;
     width: 100%;
     height: 15vh;
     background-color: black;
@@ -125,7 +134,7 @@ img.aparecerSlide{
     font-size: large;
 }
 .detalles p{
-    margin-bottom: 10px;
+    margin-bottom: 3px;
 }
 .detalles .izq{
     display: flex;
@@ -181,6 +190,11 @@ img.aparecerSlide{
         align-items: center;
         flex-direction: column;
         height: 15vh;
+    }
+    .listaVehiculos .img{
+        padding: 3%;
+        width: 100%;
+        height: 65vh;
     }
     .logo{
         display: flex;
